# langchain-projects

langchain-new/: pyproject.toml  requirements.txt
langchain-new/notebook/: langchain1.ipynb  resume_agent.ipynb  weather_agent.ipynb
react_agents/: pyproject.toml  requirements.txt
react_agents/note/: react_agent.ipynb
