[project]
name = "langchain-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-fireworks>=1.3.1",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.6",
]
