[project]
name = "react-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11 "
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "tavily>=1.1.0",
    "wikipedia>=1.4.0",
]
